# cosmo

./: .gitignore  CMakeLists.txt
data/shaders/: ocursor.frag  tacicon1.frag  tacicon1.vert  tacicon_sdf.frag
data/shaders/tactical/contact/: munition.frag  planet.frag  ship.frag
data/systems/: SolarSystem.json
src/: Components.h  main.cpp
src/orbital/: BodyRenderer.cpp  BodyRenderer.h  Components.h  KeplerSolver.cpp  KeplerSolver.h  Simulation.cpp  Simulation.h  SystemDefinition.h  SystemFactory.cpp  SystemFactory.h
src/tactical/: Components.h  Tacicon.cpp  Tacicon.h  Tacview.cpp  Tacview.h
src/ui/: ContactInfoPanel.cpp  ContactInfoPanel.h  OrbitalCursor.cpp  OrbitalCursor.h
